# ft-datastar

./: README.md  pyproject.toml
examples/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
examples/static/: styles.css
src/ft_datastar/: __init__.py  components.py  helpers.py  sse.py
