[project]
name = "examples"
version = "0.1.0"
description = "Examples for FastHTML + Datastar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ft-datastar",
    "python-fasthtml>=0.12.1",
]

[tool.uv.sources]
ft-datastar = { git = "https://github.com/banditburai/ft-datastar.git" }
